<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_map_location">Map location</string>
    <string name="action_share">Share</string>

    <!-- GENERAL PREFERENCE SETTINGS -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">02801</string>
    <string name="pref_temperature_label">Temperature</string>
    <string name="pref_temperature_key" translatable="false">temperature</string>
    <string name="pref_temperature_default" translatable="false">metric</string>
</resources>
